[gd_scene load_steps=3 format=3 uid="uid://bibywo5mrgewf"]

[ext_resource type="Script" path="res://src/scenes/mainmenu/main_menu.gd" id="1_klmlv"]
[ext_resource type="PackedScene" uid="uid://dkntd5g7ap0xd" path="res://src/core/ui/screen_fade.tscn" id="2_e2rr4"]

[node name="MainMenu" type="Node"]
script = ExtResource("1_klmlv")
game_scene_path = "res://src/core/scenes/game/game.tscn"

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="MainContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="TitleContainer" type="VBoxContainer" parent="MarginContainer/MainContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Title" type="Label" parent="MarginContainer/MainContainer/TitleContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"TitleLabel"
text = "Barbarian
Fight"
horizontal_alignment = 1

[node name="Copyright" type="Label" parent="MarginContainer/MainContainer/TitleContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "(c) AaronWizard, 2024"

[node name="Start" type="Button" parent="MarginContainer/MainContainer"]
custom_minimum_size = Vector2(32, 16)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Start"

[node name="Quit" type="Button" parent="MarginContainer/MainContainer"]
custom_minimum_size = Vector2(32, 16)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Quit"

[node name="ScreenFade" parent="." instance=ExtResource("2_e2rr4")]

[connection signal="pressed" from="MarginContainer/MainContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MarginContainer/MainContainer/Quit" to="." method="_on_quit_pressed"]
